# florah

./: CITATION.cff  LICENSE.md  MANIFEST.rst  README.md  README.rst  config.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  train_attention_maf.py  train_maf.ipynb  train_nn.py  train_recurrent_maf.py
data_config/: gureft.yaml  gureft05.yaml  gureft15.yaml  gureft35.yaml  gureft90.yaml  vsmdpl.yaml
extras/: physics.py
extras/tables/: bp_redshifts.txt  gureft_zmax.txt  gureft_zmax_con.txt  meta.csv  vsmdpl_redshifts.txt
extras/utils/: __init__.py  io_utils.py  ppr_utils.py
merger_tree_ml/: __init__.py  data_module.py  envs.py  physics.py  transforms.py  utils.py
merger_tree_ml/models/: __init__.py  attention_maf.py  bijectors.py  data_module.py  flows.py  linear_model.py  modules.py  recurrent_maf.py  recurrent_maf_decay.py  rnn_model.py  schedulers.py  torchutils.py  transforms.py
merger_tree_ml/models/gru/: data_module.py  model.py  transform.py
merger_tree_ml/models/maf/: data_module.py  (+1 more)
merger_tree_ml/utils/: __init__.py  io_utils.py  torch_utils.py
pipelines/: compute_mass_concentration.py  compute_statistics.py  run_pipelines.py  sample_and_plot_trees.py  self_similarity.py  utils.py
scripts/: create_raw_dataset.py  create_raw_dataset_sb.py  ppr.py  ppr_varstep.py  preprocess.py  preprocess_multibox.py  sample_trees.py  train_attention_maf.py  train_recurrent_maf.py  utils.py
src/florah/: __init__.py  logger.py  utils.py
src/merger_tree_ml/: config.py  logger.py  physics.py
tutorials/: example_data.h5  example_training.ipynb
(+39 files in other folders)
