[metadata]
name = florah
version = 0.0.0
description = Generating galaxy merger trees with flow-based recurrent model
author = Tri Nguyen
author_email = tnguy@mit.edu
url = https://github.com/trivnguyen/merger_tree_ml

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your requirements here
    astropy
    numpy
    nbodykit
    pandas
    torch
    pytorch_lightning
    scipy

[options.package_data]
merger_tree_ml = config.ini, data/*

[options.packages.find]
where = src
include_package_data = True
